# sebex

./: .editorconfig  .gitignore  Makefile  Pipfile  README.md  pyproject.toml  setup.py
examples/: membrane_profile
sebex/: __about__.py  __init__.py  __main__.py  checksum.py  cli.py  context.py  jobs.py  log.py  name_similarity.py  popen.py  smartmatch.py  vcs.py
sebex/analysis/: __init__.py  analyzer.py  database.py  elixir.py  graph.py  language.py  model.py  state.py  types.py  version.py
sebex/analysis/language/: __init__.py  elixir.py
sebex/cmd/: bootstrap.py  foreach.py  graph.py  ls.py  release.py  sync.py
sebex/config/: __init__.py  file.py  format.py  manifest.py  profile.py
sebex/edit/: __init__.py  git.py  patch.py  span.py
sebex/language/: __init__.py  abc.py  elixir.py
sebex/language/elixir/: __init__.py
sebex/languages/: __init__.py  elixir.py
sebex/release/: __init__.py  git.py  state.py
sebex/release/executor/: __init__.py  cleanup.py  close_release_branch.py  create_gh_release.py  create_github_release.py  merge_pull_request.py  open_pull_request.py  open_release_branch.py  publish_package.py  types.py  util.py
sebex_elixir_analyzer/: .gitignore  README.md  mix.exs
sebex_elixir_analyzer/lib/: sebex_elixir_analyzer.ex
sebex_elixir_analyzer/lib/sebex_elixir_analyzer/: analysis_report.ex  cli.ex  hex_info.ex  mix_lock.ex  (+2 more)
sebex_elixir_analyzer/test/: sebex_elixir_analyzer_test.exs
tests/: conftest.py
tests/analysis/: mock_database.py  test_graph.py  test_version.py
tests/edit/: test_patch.py
tests/release/: test_state.py
(+3 files in other folders)
