[tool.poetry]
name = "sebex"
version = "0.1.0"
description = "The ultimate assistant in Membrane Framework releasing & development"
license = "Apache-2.0"
authors = ["Membrane Team <info+sebex@membraneframework.org>"]
readme = "README.md"
homepage = "membraneframework.org"
repository = "https://github.com/membraneframework/sebex"
classifiers = [
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Version Control :: Git",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8"
]
include = [
    "sebex/language/elixir/elixir_analyzer"
]

[tool.poetry.scripts]
sebex = "sebex.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
colorama = "*"
gitpython = "^3.0"
graphviz = "^0.13.0"
petname = "^2.6"
pygithub = "^1.59.0"
python-dotenv = "^0.10.5"
pyyaml = "^5.3"
semver = "^2.9"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
